fixed post alignments - justified

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -24,6 +24,8 @@ $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
 $table-text-align: left !default;
+$post-text-align: justify !default;
+$post-text-justify: inter-word !default;
 
 // Width of the content area
 $content-width:    800px !default;
