--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -221,7 +221,7 @@
     font-family: $title-font-family;
     letter-spacing: -1px;
     line-height: 1;
-    
+
     @include media-query($on-laptop) {
 	@include relative-font-size(2.25);
     }
@@ -229,6 +229,8 @@
 
 .post-content {
   margin-bottom: $spacing-unit;
+  text-align: $post-text-align;
+  text-justify: $post-text-justify;
 
   h2 {
     @include relative-font-size(2);
